Fix 6x6 game card on mobile

--- a/app/styles/components/_game-card.scss
+++ b/app/styles/components/_game-card.scss
@@ -68,7 +68,7 @@ body {
   }
 
   .game-card-6x6 {
-    width: 50px;
+    width: 37.5px;
     font-size: 1.75rem;
   }
 }
